# react-native-txplayer

./: .eslintcache  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  CONTRIBUTING.md  JTPlayerKit.podspec  JTPlayerView.podspec  LICENSE  README.md  package-lock.json  package.json  react-native-txplayer.podspec  tsconfig.json
JTPlayerKit/: SuperPlayerControlView.h  SuperPlayerControlView.m  SuperPlayerControlViewDelegate.h  SuperPlayerModelInternal.h  SuperPlayerView.h  SuperPlayerView.m
JTPlayerView/: Components.swift  Entity.swift  Helpers.swift  InteractionAreaView.swift  InteractionAudioView.swift  InteractionInputView.swift  InteractionSelectView.swift  InteractionView.swift
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/txplayer/: HighlightAreaView.kt  InteractionEntity.kt  InteractionView.kt  InteractiveInputView.kt  InteractiveSelectView.kt  TxDownloadManager.java  TxplayerNativeModule.java  TxplayerPackage.java  TxplayerView.java  TxplayerViewManager.java
android/src/main/res/drawable/: interactive_audio_bg.xml  interactive_bg.xml  interactive_input_bg.xml
android/src/main/res/layout/: view_interactive.xml  view_interactive_audio.xml  view_interactive_input.xml  view_interactive_option.xml  view_interactive_select.xml
android/src/main/res/values/: colors.xml
example/: package-lock.json  package.json
ios/: TxDownloadManager.h  TxDownloadManager.mm  TxplayerView.h  TxplayerView.m  TxplayerView.mm  TxplayerViewComponentView.h  (+3 more)
(+91 files in other folders)
